@@ -12,7 +12,7 @@ WriteMakefile(
 	      'CCFLAGS' => '-g -O2 -D_GNU_SOURCE -Wall -Wpointer-arith -Wstrict-prototypes -Wmissing-prototypes -Wno-char-subscripts',
 	      'OPTIMIZE'=> '-g',
 	      'DEFINE'	=> '-Dbool=char -DHAS_BOOL',
-	      'INC'	=> ' -I../build -I../lib -I../popt -I/usr/include/rpm',
+	      'INC'	=> ' -I/usr/local/include -I../build -I../lib -I../popt -I/usr/include/rpm',
 	      'depend'	=> { 'rpm.c' => 'transaction.xs header.xs db.xs' },
 );
 
